[gd_scene load_steps=8 format=3 uid="uid://dfqtumaxkw6sy"]

[ext_resource type="Texture2D" uid="uid://376kuruoy34p" path="res://sprites/UI/clock/clock_background.png" id="1_m5fp4"]
[ext_resource type="Script" path="res://scripts/UI/clock.gd" id="1_wqv5o"]
[ext_resource type="Texture2D" uid="uid://o1euhrx7dop7" path="res://sprites/UI/clock/clock_needle.png" id="3_n10xf"]
[ext_resource type="Script" path="res://addons/finite_state_machine/scripts/finite_state_machine.gd" id="4_rmafl"]
[ext_resource type="Script" path="res://scripts/SealedDoorSM/default_state.gd" id="5_cwlcr"]
[ext_resource type="Script" path="res://scripts/SealedDoorSM/dragged_state.gd" id="6_8bics"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_p5h0d"]
size = Vector2(143, 52)

[node name="Clock" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_wqv5o")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="TextureRect" type="TextureRect" parent="CenterContainer"]
layout_mode = 2
texture = ExtResource("1_m5fp4")

[node name="ClockHand" type="Sprite2D" parent="CenterContainer"]
rotation = -1.5708
texture = ExtResource("3_n10xf")

[node name="Area2D" type="Area2D" parent="CenterContainer/ClockHand"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="CenterContainer/ClockHand/Area2D"]
position = Vector2(79.5, -1)
shape = SubResource("RectangleShape2D_p5h0d")

[node name="FiniteStateMachine" type="Node" parent="."]
script = ExtResource("4_rmafl")

[node name="DefaultState" type="Node" parent="."]
script = ExtResource("5_cwlcr")

[node name="DraggingState" type="Node" parent="."]
script = ExtResource("6_8bics")

[connection signal="mouse_entered" from="CenterContainer/ClockHand/Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="CenterContainer/ClockHand/Area2D" to="." method="_on_area_2d_mouse_exited"]
